test/1.4/errors/T_EIDENT.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// ERROR EIDENT
param p = garbage;

// Conditional members are not visible in object scope, but they are reserved
// in the template type's scope.
template x {
    #if (false) {
        connect c;
    }
}
port y is x {
    /// ERROR EIDENT
    param p = c;
}

group g[i < 2] {
    method m() {
        // no error
        g.len;

        /// ERROR EIDENT
        len;

        // 'this' refers to the specific element of the array, not the array
        // itself.
        /// ERROR EREF
        this.len;
    }
}

method init() {
    local x x = cast(y, x);
    /// ERROR ENSHARED
    x.c;
    #foreach z in ([0]) {
        /// ERROR EIDENT
        session int s = z;
    }
    g[0].m();

    /// ERROR EIDENT
    local int v = v;
    /// ERROR EIDENT
    local (int a, int b) = (4, a);
}
